Premier commit du projet

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <!-- Résultat -->
     <div id="result-screen" style="display: none;">
-      <h2>Bravo <span id="player-result-name"></span> ! 🎉</h2>
+      <h2>Achraf ferassy 7sen menek walakin Bravo <span id="player-result-name"></span> ! 🎉</h2>
       <p>Votre score : <span id="score"></span>/20</p>
       <button id="restart-btn">Rejouer</button>
     </div>
