--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <div id="app">
     <!-- Écran d'accueil -->
-    <div id="welcome-screen">
+    <div id="welcome-screen" class="container">
       <h1>Quiz - Pays du Monde 🌍</h1>
       <label for="player-name">Entrez votre prénom :</label>
       <input type="text" id="player-name" placeholder="Votre prénom...">
@@ -16,7 +16,7 @@
     </div>
 
     <!-- Zone de quiz -->
-    <div id="quiz-screen" style="display: none;">
+    <div id="quiz-screen" class="container" style="display: none;">
       <div id="question-counter">Question 1/20</div>
       <div id="question-text"></div>
       <div id="options"></div>
@@ -24,8 +24,8 @@
     </div>
 
     <!-- Résultat -->
-    <div id="result-screen" style="display: none;">
-      <h2>Achraf ferassy 7sen menek walakin Bravo <span id="player-result-name"></span> ! 🎉</h2>
+    <div id="result-screen" class="container result-animation" style="display: none;">
+      <h2>Bravo <span id="player-result-name"></span> ! 🎉</h2>
       <p>Votre score : <span id="score"></span>/20</p>
       <button id="restart-btn">Rejouer</button>
     </div>
